# TaskMateAI

./: .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml  requirements.txt  server.py
docs/: AI_GUIDE.md  PRD.md
example/: json_pattern1.json  json_pattern2.json
src/taskmateai/: Server.py  __init__.py
src/taskmateai/output/: tasks.json
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_agent_projects.py  test_mcp_tools.py  test_task_utils.py
