[project]
name = "TaskMateAI"
version = "0.1.0"
description = ""
authors = [
    {name = "newaitees",email = "newaitees@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastmcp (>=0.4.1,<0.5.0)",
    "requests (>=2.32.3,<3.0.0)",
    "langchain (>=0.3.19,<0.4.0)",
    "langchain-mcp (>=0.2.0,<0.3.0)",
    "langchain-core (>=0.3.40,<0.4.0)",
    "mcp (>=1.3.0,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
